--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="which_color_is_mixed">Which color is mixed?</string>
     <string name="quit">Quit</string>
     <string name="result_image">result image</string>
+    <string name="green">Green</string>
+    <string name="purple">Purple</string>
+    <string name="orange">Orange</string>
 </resources>
