--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="sport">Sport</string>
     <string name="music">Music</string>
     <string name="logout">Logout</string>
+    <string name="end_date">End Date</string>
+    <string name="start_date">Start Date</string>
+    <string name="delete">delete</string>
+    <string name="save">Save</string>
     <string name="logout_prompt">Are you sure you want to logout ?</string>
 </resources>
